--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,17 @@ server {
         index index.html;
     }
 
+    location ~* favicon.ico$ {
+        return 200;
+    }
+
+    location /* {
+        try_files $uri =404;
+    }
+
     error_page 404 /404.html;
     location = /404.html {
-        return /usr/share/nginx/html/error-pages/;
+        root /usr/share/nginx/html/error-pages;
     }
 
     error_page 500 501 502 503 504 /50x.html;
